remove jxbrowser